--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "nuxt": "^1.0.0-rc11"
+    "axios": "^0.17.1",
+    "nuxt": "^1.0.0-rc11",
+    "tachyons": "^4.9.0",
+    "tachyons-debug": "^1.1.10"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
